--- a/Buoi1/index.html
+++ b/Buoi1/index.html
@@ -18,7 +18,7 @@
 <body>
     
     <div>
-         <h1> Le VĂn Thương </h1> 
+         <h1> Le VĂn Thương Đẹp trai </h1> 
         <h2> Lâm Tùng </h2>
         <p>Thích đọc sách </p>
         <img  src ="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg" />
