add thuong dep trai

--- a/Buoi3/lqd.html
+++ b/Buoi3/lqd.html
@@ -14,7 +14,7 @@
     <div class="list-4">List-4</div>
     <div class="list-5">List-5</div>
     <div class="list-6">List-6</div>
-    <div>N</div>
+    <div>Anh Thuong ddepj trai lam</div>
     <div>N</div>
     <div>N</div>
     <div>N</div>
