--- a/Buoi3/lqd.html
+++ b/Buoi3/lqd.html
@@ -28,5 +28,9 @@
     <div>N</div>
     <div>N</div>
     <div>N</div>
+     <input type="radio" name="price">Thousand<br>
+      <input type="radio" name="price">Lakh<br>
+      <input type="radio" name="price">Crore
+       <input type="radio" name="k">D
 </body>
 </html>
